--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.0",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "inspirational-quotes": "^1.0.8",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
